# polito-ecai

./: README.md  audio_recorder.py
HW2/: .gitignore  8.1 - HW2 - Evaluation of Accuracy and Size.ipynb  HW2_version1.ipynb  README.md  keyword_spotter_results.csv  msc_dataset.py  pyproject.toml
Lab4/: 7.1 - Lab4 - Training with DS-CNN.ipynb  7.2 - Lab4 - Training with Weight Pruning.ipynb  7.3 - Lab4 - Training with Node-Based Pruning.ipynb  7.4 - Lab4 - Post-Training Quantization.ipynb  ECAI-Lab4.txt  guida.md  msc_dataset_lab4.py
