[project]
name = "hw2"
version = "0.1.0"
description = ""
authors = [
    {name = "ghMellow",email = "nicotermins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "torchcodec (>=0.8.1,<0.9.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "onnxscript (>=0.5.6,<0.6.0)",
    "onnxruntime (>=1.23.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
